adjusted the width of the #places section on mobile view

--- a/index.html
+++ b/index.html
@@ -169,6 +169,11 @@
             </div>
         </div>
     </div>
+
+    <div id="first-scroll-buttons" class="scroll-buttons">
+        <button class="scroll-sideways scroll-left" id="left"><</button>
+        <button class="scroll-sideways scroll-right" id="right">></button>
+    </div>
   
     <div id="sect5-wrapper">
       <div id="div1-sect5">
@@ -194,10 +199,10 @@
       <div id="people-container"></div>
     <!-- </div> -->
 
-    <div id="scroll-buttons">
+    <div id="second-scroll-buttons" class="scroll-buttons">
         <button class="scroll-sideways scroll-left" id="left"><</button>
         <button class="scroll-sideways scroll-right" id="right">></button>
-      </div>
+    </div>
 
 
     <div id="cont-before-footer">
