--- a/index.html
+++ b/index.html
@@ -13,13 +13,56 @@
       <a href="#">MISSION<div class="hov-slider-cont"><div class="hov-slider"></div></div></a>
       <a href="#">JOURNEY<div class="hov-slider-cont"><div class="hov-slider"></div></div></a>
       <div class="has-dropdown">
-        <a href="#">SUMMITS<div class="hov-slider-cont"><div class="hov-slider"></div></div></a>
-        <div class="dropdown">
-          <a href="#">Summit 2023</a>
-          <a href="#">Summit 2024</a>
-          <a href="#">Future Events</a>
+        <a href="#">
+          SUMMITS
+          <div class="hov-slider-cont">
+            <div class="hov-slider"></div>
+          </div>
+        </a>
+        
+        <div id="dropdown">
+          <a href="#">
+            <div>
+              <p class="nav-orange-text">01</p>
+              <div>
+                <p>Americas</p>
+                <p class="nav-grey-text">Silicon Valley</p>
+              </div>
+            </div>
+          </a>
+
+          <a href="#">
+            <div>
+              <p class="nav-orange-text">02</p>
+              <div>
+                <p>Asia</p>
+                <p class="nav-grey-text">Bangkok</p>
+              </div>
+            </div>
+          </a>
+
+          <a href="#">
+            <div>
+              <p class="nav-orange-text">03</p>
+              <div>
+                <p>Mena</p>
+                <p class="nav-grey-text">Dubai</p>
+              </div>
+            </div>
+          </a>
+
+          <a href="#">
+            <div>
+              <p class="nav-orange-text">04</p>
+              <div>
+                <p>Europe</p>
+                <p class="nav-grey-text">Berlin</p>
+              </div>
+            </div>
+          </a>
         </div>
       </div>
+
       <a href="#">THOUGHT LEADERS<div class="hov-slider-cont"><div class="hov-slider"></div></div></a>
       <a href="#">ABOUT<div class="hov-slider-cont"><div class="hov-slider"></div></div></a>
     </nav>
