--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <a href="#">JOURNEY<div class="hov-slider-cont"><div class="hov-slider"></div></div></a>
 
 
-      <div href="#" id="has-dropdown" style="color: white; font-weight: bold; cursor: pointer">
-          SUMMITS<div class="hov-slider-cont"><div class="hov-slider"></div></div>
+      <div href="#" id="has-dropdown">
+        <a>SUMMITS<div class="hov-slider-cont"><div class="hov-slider"></div></div></a>
           <div id="dropdown">
             <a href="#">
               <div>
@@ -236,14 +236,14 @@
       </div>
     </div>
 
-    <div class="slider-wrapper">
+    <!-- <div class="slider-wrapper"> -->
       <div id="people-container"></div>
       
       <div id="second-scroll-buttons" class="scroll-buttons">
         <button class="scroll-sideways scroll-left" id="left"><</button>
         <button class="scroll-sideways scroll-right" id="right">></button>
     </div>
-    </div>
+    <!-- </div> -->
 
     
 
