working on the mobile view of the #div2-b4footer div

--- a/index.html
+++ b/index.html
@@ -267,6 +267,12 @@
     
         <div id="div2-b4footer">
             <p>Luminarians are distinguished executives recognized for their unique combination of talent, insight, and charisma. They drive transformation and inspire others by bringing innovative ideas to life and creating a profound impact on industries and global communities.</p>
+            <div style="width: 200px">
+              <a id="nav-invite" href="#">
+                <p>REQUEST AN INVITATION</p>
+                <div class="nav-invite-slider"></div>
+              </a>
+            </div>
         </div>
       </div>
       <div id="black-bg-before-footer">
