--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
         Visionary leaders may request an invitation to join The Luminarian Fellowship. Membership and dues are extended by invitation and confirmed upon acceptance into the Fellowship.
       </p>
 
-      <div style="width: 200px;" >
+      <div style="width: 200px;" id="invite-b4-footer">
         <a id="nav-invite" href="#">
       <p>REQUEST AN INVITATION</p>
       <div class="nav-invite-slider"></div>
