css styling for mobile responsiveness contd.

--- a/index.html
+++ b/index.html
@@ -360,12 +360,11 @@
     </div>
 
     <div id="just-b4-footer">
+      <div id="main-div">
       <h2>
-        <span>
           Pioneer. <br> 
           Influence. <br>
-        </span>
-        Evolve.
+        <span style="color: black">Evolve.</span>
       </h2>
       
       <p>
@@ -374,10 +373,12 @@
 
       <div style="width: 200px;" id="invite-b4-footer">
         <a id="nav-invite" href="#">
-      <p>REQUEST AN INVITATION</p>
-      <div class="nav-invite-slider"></div>
-    </a>
+          REQUEST AN INVITATION
+          <div class="nav-invite-slider"></div>
+        </a>
       </div>
+
+    </div>
       
 
       <div id="just-b4-footer-inner-cont">
