modifying the mobile responsiveness of the #just-b4-footer div

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <a href="#">THOUGHT LEADERS<div class="hov-slider-cont"><div class="hov-slider"></div></div></a>
       <a href="#">ABOUT<div class="hov-slider-cont"><div class="hov-slider"></div></div></a>
     </nav>
-    <a id="nav-invite" href="#">
+    <a class="nav-invite" href="#">
       <p>REQUEST AN INVITATION</p>
       <div class="nav-invite-slider"></div>
     </a>
@@ -372,7 +372,7 @@
       </p>
 
       <div style="width: 200px;" id="invite-b4-footer">
-        <a id="nav-invite" href="#">
+        <a class="nav-invite" href="#">
           REQUEST AN INVITATION
           <div class="nav-invite-slider"></div>
         </a>
