--- a/index.html
+++ b/index.html
@@ -75,8 +75,12 @@
   <div id="mobile-menu">
     <a href="#">MISSION</a>
     <a href="#">JOURNEY</a>
-    <a href="#">SUMMIT 2023</a>
-    <a href="#">SUMMIT 2024</a>
+    <a href="#">SUMMIT</a>
+    <div id="summits">
+      <a href="#">SUMMIT 2023</a>
+      <a href="#">SUMMIT 2024</a>
+    </div>
+  
     <a href="#">FUTURE EVENTS</a>
     <a href="#">THOUGHT LEADERS</a>
     <a href="#">ABOUT</a>
@@ -268,7 +272,7 @@
         <div id="div2-b4footer">
             <p>Luminarians are distinguished executives recognized for their unique combination of talent, insight, and charisma. They drive transformation and inspire others by bringing innovative ideas to life and creating a profound impact on industries and global communities.</p>
             <div style="width: 200px">
-              <a id="nav-invite" href="#">
+              <a class="nav-invite" href="#">
                 <p>REQUEST AN INVITATION</p>
                 <div class="nav-invite-slider"></div>
               </a>
