modified the hamburger menu summits content

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <div id="mobile-menu">
     <a href="#">MISSION</a>
     <a href="#">JOURNEY</a>
-    <a href="#">SUMMIT</a>
+    <a href="#" id="summit">SUMMIT</a>
     <div id="summits">
       <a href="#">SUMMIT 2023</a>
       <a href="#">SUMMIT 2024</a>
