--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </div>
   </div>
 
-  <div id="mobile-menu">
+  <div class="mobile-menu" id="mobile-menu1">
     <a href="#">MISSION</a>
     <a href="#">JOURNEY</a>
     <a href="#" id="summit">SUMMIT</a>
@@ -467,9 +467,24 @@
       <p>REQUEST AN INVITATION</p>
       <div class="nav-invite-slider"></div>
     </a>
-    <div class="hamburger" onclick="toggleMobileMenu()">
-      <span></span><span></span><span></span>
+    <div class="hamburger" onclick="toggleMobileMenu2()">
+      <span></span><span></span>
     </div>
+  </div>
+
+  <div id="mobile-menu2">
+    <a href="#">MISSION</a>
+    <a href="#">JOURNEY</a>
+    <a href="#" id="summit">SUMMIT</a>
+    <div id="summits">
+      <a href="#">SUMMIT 2023</a>
+      <a href="#">SUMMIT 2024</a>
+    </div>
+  
+    <a href="#">FUTURE EVENTS</a>
+    <a href="#">THOUGHT LEADERS</a>
+    <a href="#">ABOUT</a>
+    <a href="#">REQUEST AN INVITATION</a>
   </div>
 
   <!-- END OF NAV BAR COPY -->
