worked on the navbar of the thought leaders page

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>  
     
 
-      <a href="#">THOUGHT LEADERS<div class="hov-slider-cont"><div class="hov-slider"></div></div></a>
+      <a href="thought_leaders/thought_leaders.html">THOUGHT LEADERS<div class="hov-slider-cont"><div class="hov-slider"></div></div></a>
       <a href="#">ABOUT<div class="hov-slider-cont"><div class="hov-slider"></div></div></a>
     </nav>
     <a class="nav-invite" href="#">
@@ -83,7 +83,7 @@
     </div>
   
     <a href="#">FUTURE EVENTS</a>
-    <a href="#">THOUGHT LEADERS</a>
+    <a href="thought_leaders/thought_leaders.html">THOUGHT LEADERS</a>
     <a href="#">ABOUT</a>
     <a href="#">REQUEST AN INVITATION</a>
   </div>
