--- a/thought_leaders/thought_leaders.html
+++ b/thought_leaders/thought_leaders.html
@@ -3,13 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="thought_leaders.css">
     <title>Thought Leaders</title>
+
+    <style>
+      #nav-wrapper2{
+        display: flex;
+        height: 100px;
+        /* margin-bottom: 50px; */
+      }
+    </style>
 </head>
 <body>
 
-    <div class="nav-wrapper">
-    <a class="logo" href="#"><img src="https://cdn.prod.website-files.com/67247f5de52e4a1a1589e509/6728d0878b3db89eb4f1992f_Asset%201_1.svg" alt="Logo" /></a>
+  <div id="nav-wrapper2" class="nav-wrapper">
+    <a class="logo" href="#"><img src="https://files.secure.website/wscfus/10797405/32936383/taylog-photoroom.png" alt="Logo" /></a>
     <nav class="navbar">
       <a href="#">MISSION<div class="hov-slider-cont"><div class="hov-slider"></div></div></a>
       <a href="#">JOURNEY<div class="hov-slider-cont"><div class="hov-slider"></div></div></a>
@@ -62,24 +71,38 @@
       </div>  
     
 
-      <a href="#">THOUGHT LEADERS<div class="hov-slider-cont"><div class="hov-slider"></div></div></a>
+      <a href="#" style="border-bottom: 2px solid orange">THOUGHT LEADERS</a>
       <a href="#">ABOUT<div class="hov-slider-cont"><div class="hov-slider"></div></div></a>
     </nav>
     <a class="nav-invite" href="#">
       <p>REQUEST AN INVITATION</p>
       <div class="nav-invite-slider"></div>
     </a>
-    <div class="hamburger" onclick="toggleMobileMenu()">
-      <span></span><span></span><span></span>
+    <div class="hamburger" onclick="toggleMobileMenu2()">
+      <span></span><span></span>
     </div>
   </div>
 
+  <div id="mobile-menu2">
+    <a href="#">MISSION</a>
+    <a href="#">JOURNEY</a>
+    <a href="#" id="summit">SUMMIT</a>
+    <div id="summits">
+      <a href="#">SUMMIT 2023</a>
+      <a href="#">SUMMIT 2024</a>
+    </div>
+  
+    <a href="#">FUTURE EVENTS</a>
+    <a href="#">THOUGHT LEADERS</a>
+    <a href="#">ABOUT</a>
+    <a href="#">REQUEST AN INVITATION</a>
+  </div>
   
 
 
     <h1>Meet Our Thought <span>Leaders*</span></h1>
 
-    <div id="people-container"></div>
+    <div id="people-container2"></div>
 
     <p style="color: grey">*Preliminary List</p>
 
