--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <!-- ✅ Font Imports -->
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;600;700;800&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet" />
 
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Nunito+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+
   <style>
     :root {
       --saffron: #f1cd30;
@@ -40,7 +43,7 @@
       font-size: 16px;
       font-weight: 300;
       line-height: 1.625;
-      /* height: 200vh; */
+      height: 100vh;
     }
 
     /* Headings */
@@ -53,13 +56,13 @@
 
     /* Tagline & Secondary Text */
     .tagline,
-    .security-note,
-    .cta-under-form,
-    .initiatives-div {
+    .cta-under-form{
       font-family: "Poppins", Arial, sans-serif;
-      font-size: 14px;
+      font-size: 16px;
       line-height: 1.42857;
     }
+
+
 
     /* Buttons */
     button,
@@ -123,7 +126,6 @@
     }
 
     #typewriter {
-      font-family: monoscript;
       font-size: 18px;
       font-weight: bold;
       white-space: nowrap;
@@ -139,6 +141,7 @@
       border-radius: 50px;
       width: 150px;
       transition: background 0.3s ease;
+      margin-bottom: 120px;
     }
 
     .login-scroll-btn:hover {
@@ -238,12 +241,13 @@
       margin-top: 20px;
       text-align: center;
       position: absolute;
-      bottom: 50px;
-      left: 50px;
-      background: var(--charcoal);
+      bottom: 30px;
+      left: 100px;
+      background: black;
       color: var(--lightgray);
-      padding: 30px;
+      padding: 20px;
       font-size: 25px;
+      font-family: 'Nunito Sans', sans-serif;
     }
 
     @media (max-width: 600px) {
@@ -303,7 +307,7 @@
     <div class="form-container">
       <div class="form-logo">
         <img src="GLYPH(1).png" alt="Logo" />
-        <h3>Sign In</h3>
+        <h3 style="color: white;">Sign In</h3>
       </div>
       <form id="loginForm">
         <label for="email">Email</label>
@@ -312,17 +316,12 @@
         <input type="password" id="password" placeholder="Password" required />
         <button type="submit">Login</button>
         <p id="errorText" class="error-text">Incorrect email or password.</p>
-        <p class="security-note">🔒 Your credentials are secure and encrypted.</p>
       </form>
     </div>
     <p class="cta-under-form">co-Build to co-Own what you help to co-Create</p>
   </div>
 
 
-  <!-- <script>
-    const loginForm = document.getElementById('right-section');
-    const loginBtn = document.getElementById('login')
-  </script> -->
 
 
 
