--- a/index.html
+++ b/index.html
@@ -87,8 +87,11 @@
       align-items: center;
       justify-content: center;
       gap: 30px;
-      padding: 100px;
-      height: 100vh;
+      min-height: 100dvh;
+      height: auto;
+      padding: clamp(32px, 5vw, 100px);
+      /* padding: 100px; */
+      /* height: 100vh; */
     }
 
     .left-section {
@@ -105,20 +108,20 @@
     }
 
     .left-section h1 {
-      font-size: 40px;
       font-weight: 800;
+      font-size: clamp(28px, 3.2vw, 40px);
       letter-spacing: 0.5px;
     }
 
     .left-section h2 {
-      font-size: 26px;
       font-weight: 600;
+      font-size: clamp(18px, 2.2vw, 26px);
     }
 
     
     #typewriter-container {
-      height: 20px;
-      padding: 10px;
+      min-height: 36px;
+      padding: 8px 10px;
       width: 100%;
       display: flex;
       align-items: center;
@@ -126,20 +129,22 @@
     }
 
     #typewriter {
-      font-size: 18px;
-      font-weight: bold;
+      font-size: clamp(16px, 1.7vw, 18px);
+      font-weight: 700;
       white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
 
     .login-scroll-btn {
       margin-top: 30px;
-      padding: 14px;
       background-color: var(--prussian);
       color:white;
       font-weight: bold;
+      width: clamp(160px, 30vw, 220px);
+      padding: 12px 18px;
       border: none;
       border-radius: 50px;
-      width: 150px;
       transition: background 0.3s ease;
       margin-bottom: 120px;
     }
@@ -224,13 +229,6 @@
       text-align: center;
     }
 
-    .security-note {
-      margin-top: 12px;
-      color: var(--saffron);
-      text-align: center;
-      font-style: italic;
-    }
-
     .cta-under-form {
       font-weight: 600;
       text-align: center;
@@ -238,11 +236,11 @@
     }
 
     .initiatives-div {
-      margin-top: 20px;
-      text-align: center;
       position: absolute;
       bottom: 30px;
       left: 100px;
+      padding: 16px 20px;
+      font-size: clamp(14px, 1.8vw, 18px);
       background: black;
       color: var(--lightgray);
       padding: 20px;
@@ -250,7 +248,7 @@
       font-family: 'Nunito Sans', sans-serif;
     }
 
-    @media (max-width: 600px) {
+    /* @media (max-width: 600px) {
       .left-section, .right-section {
         flex: none;
         width: 100%;
@@ -272,6 +270,90 @@
 
       .security-note {
         font-size: 12px;
+      }
+    } */
+
+    @media (max-width: 992px) {
+      .left-section, .right-section {
+        padding: 48px 36px;
+      }
+      .form-container {
+        max-width: 520px;       /* a bit wider to reduce vertical scroll */
+      }
+      .initiatives-div {
+        left: 32px;
+        bottom: 20px;
+      }
+    }
+
+    /* --------- Breakpoint: small tablets / large phones (≤ 768px) --------- */
+    @media (max-width: 768px) {
+      /* Keep your “reveal on login” flow, but tighten type & spacing */
+      .left-section, .right-section {
+        padding: 36px 24px;
+        min-height: 100dvh;
+      }
+
+      #typewriter {
+        white-space: normal;    /* allow wrap if needed */
+        text-align: center;
+      }
+
+      .login-scroll-btn {
+        width: 100%;
+        max-width: 320px;
+        margin-bottom: 48px;
+      }
+
+      /* Initiatives badge switches from absolute to inline to avoid overlaps */
+      .initiatives-div {
+        position: static;
+        margin: 10px auto 0;
+        border: 1px solid rgba(0,0,0,0.08);
+        padding: 20px;
+        font-size: 18px;
+        max-width: max-content;
+        height: 150px
+      
+      }
+    }
+
+    /* --------- Breakpoint: phones (≤ 480px) --------- */
+    @media (max-width: 480px) {
+      .left-section, .right-section {
+        padding: 28px 16px;
+      }
+      .left-section h1 {
+        font-size: 24px;
+      }
+      .left-section h2 {
+        font-size: 16px;
+      }
+      #typewriter {
+        font-size: 16px;
+      }
+      .form-container {
+        padding: 22px 18px;
+        border-radius: 12px;
+      }
+      label,
+      input,
+      .tagline,
+      .cta-under-form {
+        font-size: 14px;
+        line-height: 1.45;
+      }
+    }
+
+    /* Accessibility: respect reduced motion (tone down hover lift) */
+    @media (prefers-reduced-motion: reduce) {
+      .login-scroll-btn:hover {
+        transform: none;
+      }
+      * {
+        animation: none !important;
+        transition: none !important;
+        scroll-behavior: auto !important;
       }
     }
   </style>
